adds swagger
